[package]
name = "claude-code-11359-mre"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "tokio"] }
rmcp = { version = "0.8", features = [
    "server",
    "client",
    "reqwest",
    "macros",
    "transport-sse-server",
    "transport-sse-client",
    "transport-sse-client-reqwest",
] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
